# game-of-life

./: CMakeLists.txt
.cache/clangd/index/: Simulation.cpp.B3F4DF1B7591F0B7.idx  Simulation.h.8661585679CD9D1B.idx  grid.cpp.C49CF5CAA9466769.idx  grid.h.3199C2EA0AE4A858.idx  main.cpp.1141D5DAF5A9335F.idx
executables/: main.cpp
lib_files/: CMakeLists.txt  Simulation.cpp  Simulation.h  grid.cpp  grid.h
